k8s/kong-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kong-proxy-service
  annotations:
    cloud.google.com/backend-config: '{"default": "kong-backend-config"}'
spec:
  selector:
    app: kong
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
    - name: healthcheck
      protocol: TCP
      port: 8100
      targetPort: 8100
    - name: admin
      protocol: TCP
      port: 8001
      targetPort: 8001
