k8s/kong-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-proxy-ingress
spec:
  defaultBackend:
    service:
      name: kong-proxy-service
      port:
        number: 8000
